Dropped rows based on missing and duplicated values

--- a/Data_preprocessing.ipynb
+++ b/Data_preprocessing.ipynb
@@ -11,7 +11,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obtaining file:///C:/Users/user/Desktop/UOW/Internet%20and%20Web%20Development/Assignment/WebsiteNote: you may need to restart the kernel to use updated packages.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: file:///C:/Users/user/Desktop/UOW/Internet%20and%20Web%20Development/Assignment/Website does not appear to be a Python project: neither 'setup.py' nor 'pyproject.toml' found.\n",
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sqlalchemy.orm import sessionmaker\n",
@@ -27,18 +46,8 @@
     "# Ensure the models module is installed\n",
     "%pip install -e Website\n",
     "\n",
-    "# Import your models\n",
-    "from models import Movie, Genre, Actor, Director, MovieGenre, MovieActor, MovieDirector, User\n",
-    "\n",
-    "# Ensure tables are defined with extend_existing=True\n",
-    "Genre.__table_args__ = {'extend_existing': True}\n",
-    "Actor.__table_args__ = {'extend_existing': True}\n",
-    "Director.__table_args__ = {'extend_existing': True}\n",
-    "Movie.__table_args__ = {'extend_existing': True}\n",
-    "MovieGenre.__table_args__ = {'extend_existing': True}\n",
-    "MovieActor.__table_args__ = {'extend_existing': True}\n",
-    "MovieDirector.__table_args__ = {'extend_existing': True}\n",
-    "User.__table_args__ = {'extend_existing': True}\n"
+    "# Import models\n",
+    "from Website.models import Movie, Genre, Actor, Director, MovieGenre, MovieActor, MovieDirector"
    ]
   },
   {
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +134,13 @@
    "source": [
     "#Load CSV file \n",
     "movies_df = pd.read_csv(\"IMDb_Dataset_Edited.csv\")\n",
+    "\n",
+    "# Drop rows where \"genres_list\" contains \"Unknown\"\n",
+    "movies_df = movies_df[movies_df[\"genres_list\"].apply(lambda x: \"Unknown\" not in x)]\n",
+    "movies_df = movies_df[movies_df[\"Director\"].apply(lambda x: \"Unknown\" not in x)]\n",
+    "movies_df.drop_duplicates(subset=[\"overview\"], inplace=True)\n",
+    "movies_df.dropna(subset=[\"overview\"], inplace=True)\n",
+    "movies_df.reset_index(drop=True, inplace=True)\n",
     "movies_df.info()"
    ]
   },
@@ -283,7 +299,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -297,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
